@@ -1,1 +1,0 @@
-require File.dirname(__FILE__) + '/lib/i18n_label.rb'
