@@ -1,1 +1,0 @@
-File.readlines(File.dirname(__FILE__)+'/README.textile').each { |line| puts line }
