@@ -1,4 +1,0 @@
-# desc "Explaining what the task does"
-# task :i18n_label do
-#   # Task goes here
-# end
